--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "emoji-parser",
   "license": "MIT",
   "description": "Emoji Parser for node.js based on www.Emoji-Cheat-Sheet.com",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "repository": {
     "type": "git",
     "url": "https://github.com/"
   },
   "main": "app.js",
+  "keywords": ["emoji", "parser", "smileys"],
+  "author": {
+    "name": "FrissDieGurke",
+    "email": "frissdiegurke@hotmail.com",
+    "url": "https://github.com/frissdiegurke/"
+  },
   "dependencies": {
     "wrench": "~1.5.8"
   },
