--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "emoji-parser",
   "license": "MIT",
   "description": "Emoji Parser for node.js based on www.Emoji-Cheat-Sheet.com",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "repository": {
     "type": "git",
-    "url": "https://github.com/"
+    "url": "https://github.com/frissdiegurke/emoji-parser"
   },
   "main": "app.js",
   "keywords": ["emoji", "parser", "smileys"],
